[gd_scene load_steps=4 format=2]

[ext_resource path="res://HexCodeInput.gd" type="Script" id=1]
[ext_resource path="res://ui/hexgonfont_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/ScrollingMessage.tscn" type="PackedScene" id=3]

[node name="HexCodeInput" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
margin_top = 0.90518
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.4, 1, 1 )
custom_colors/font_color_shadow = Color( 0.0901961, 0.117647, 0.529412, 1 )
text = "___"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollingMessage" parent="." instance=ExtResource( 3 )]
margin_left = -10.6513
margin_top = -24.4588
margin_right = 53.3487
margin_bottom = 0.541183
grow_horizontal = 0

[connection signal="timeout" from="ResetTimer" to="." method="_on_Timer_timeout"]
